v 2.0.2 fixed bug with description, added leads finder. Code: (added aliases, types coverage)

--- a/src/app/components/TempAccess/style.scss
+++ b/src/app/components/TempAccess/style.scss
@@ -1,13 +1,14 @@
-@import '../../../styles/colors';
-@import '../../../styles/main';
+@import '~src/styles/colors';
+@import '~src/styles/main';
 
 .temp-access {
   &__panel {
     @extend %panel;
     
     right: -55%;
-    left: 85%;
-    width: 245px;
+    left: 70%;
+    width: 255px;
+    padding: 10px 15px;
   }
 
   &__input {
